--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -1,21 +1,39 @@
+.container{
+	width: 100%;
+	height: auto;
+}
+
+body{
+	background: url("../images/background.jpg");
+}
+
 .top-section{
-	background-color: black;
-	width: 1260px;
+	background-color: #def1ff;
+	width: 100%;
 	height: 80px;
 	position: relative;
 	top: 0;
+	border-bottom: 2px solid black;
+	margin-bottom: 20px;
 }
 .middle-section{
-	background-color: white;
-	width: 1260px;
-	height: 500px;
+	width: 100%;
 	position: relative;
+	margin-bottom: 20px;
+}
+
+.middle-section-2{
+	width: 100%;
+	position: relative;
+	height: 450px;
+
 }
 
 .bottom-section{
-	background-color: #d9d9d9;
+	clear: both;
+	background-color: #def1ff;
 	border-top: thick double blue;
-	width: 1260px;
+	width: 100%;
 	height: 50px;
 	text-align: center;
 	position: relative;
@@ -23,74 +41,119 @@
 }
 
 .web-title{
-	border: 1px solid black;
-	background: #1c439c;
+	background: #1f1f77;
 	color: white;
-	width: 250px;
+	width: 25%;
 	height: 78px;
 	text-align: center;
 	position: relative;
 	float: left;
-	left: 150px
+	left: 10%;
 }
 
 .top-links{
-	position: absolute;
-	right: 150px;
-	top: 30px;
+	position: relative;
+	float: right;
+	line-height: 80px;
+	right: 10%
 }
 
 .Link{
-	color: white;
+	color: black;
+	font-weight: bold;
 }
 
 .about-me{
-	border: 1px solid black;
+	border: 3px solid lightblue;
 	padding: 10px;
-	width: 600px;
+	width: 48%;
 	position: relative;
-	left: 150px;
-	top: 20px;
-	background-color: #d9d9d9;
+	float: left;
+	left: 10%;
+	background-color: white;
+}
+
+.about-me2{
+	border: 3px solid lightblue;
+	padding: 10px;
+	width: 48%;
+	height: 740px;
+	position: relative;
+	float: left;
+	left: 10%;
+	background-color: white;
 }
 
 .connect-1{
 	text-align: center;
-	border: 1px solid black;
+	border: 3px solid lightblue;
 	padding: 10px;
 	position: relative;
-	left: 840px;
-	top: -412px;
-	width: 250px;
-	background-color: #d9d9d9;
+	width: 20%;
+	background-color: white;
+	float: right;
+	right: 10%;
 }
 
 .connect-2{
 	text-align: center;
-	border: 1px solid black;
+	border: 3px solid lightblue;
 	padding: 10px;
 	position: relative;
-	left: 840px;
-	top: -89px;
-	width: 250px;
-	background-color: #d9d9d9;
+	width: 20%;
+	float: right;
+	right: 10%;
+	background-color: white;
 }
 
 .connect-3{
 	text-align: center;
-	border: 1px solid black;
+	border: 3px solid lightblue;
 	padding: 10px;
 	position: relative;
-	left: 840px;
-	top: -89px;
-	width: 250px;
-	background-color: #d9d9d9;
+	float: right;
+	right:10%;
+	width: 20%;
+	background-color: white;
 }
 
 .Pic{
 	width: 60px;
 	height: 40px;
 	padding: 5px;
+	padding-top: 20px;
+}
+
+#profile-pic{
+	width: 200px;
+	height: auto;
+	margin: 20px;
+	float: left;
+	border: 1px solid black;
+}
+
+.portfolio-pic{
+	position: relative;
+	width: 200px;
+	height: auto;
+	margin: 10px 45px 10px 45px;
+	border: 1px solid black;
+}
+
+.pic-container{
+	position: relative;
+	width: 300px;
+	float: left;
+}
+
+.pic-text{
+	position: absolute;
+	bottom:30px;
+	left:45px;
+	width: 200px;
+	border: 1px solid black;
+	background-color: lightblue;
+	text-align: center;
 }
 
 h1{
@@ -104,12 +167,18 @@ h2{
 	font-size: 150%;
 	font-weight: bold;
 	text-align: center;
+	border-bottom: 1px solid black;
+	padding-bottom: 20px;
+	line-height: 30px;
 }
 
 h3{
 	font-size: 125%;
 	font-weight: bold;
 	text-align: center;
+	border-bottom: 1px solid black;
+	padding-bottom: 20px;
+	line-height: 25px;
 }
 
 ul{
@@ -124,3 +193,195 @@ p{
 	margin: 10px;
 }
 
+input[type="text"],
+input[type="email"]{
+	width: 100%;
+}
+
+textarea{
+	width: 100%;
+	height: 100px;
+}
+
+@media screen and (max-width: 980px) {
+
+h1{
+	font-size: 125%;
+}
+
+#profile-pic{
+	width: 40%;
+	margin: 10px ;
+}
+
+.Pic{
+	width: 40px;
+	height: 30px;
+	padding: 5px;
+	padding-top: 20px;
+}
+
+.portfolio-pic{
+	position: relative;
+	width: 100%;
+	height: auto;
+	margin: 0 0 10px 0;
+	border: 1px solid black;
+}
+
+.pic-container{
+	position: relative;
+	width: 60%;
+	margin: auto;
+	float: none;
+}
+
+.pic-text{
+	position: absolute;
+	bottom:30px;
+	left: 0;
+	width: 100%;
+	border: 1px solid black;
+	background-color: lightblue;
+	text-align: center;
+ }
+
+ .about-me2{
+	border: 3px solid lightblue;
+	padding: 10px;
+	width: 48%;
+	height: auto;
+	position: relative;
+	float: left;
+	left: 10%;
+	background-color: white;
+}
+
+
+@media screen and (max-width: 768px) {
+
+.web-title{
+	width: 35%;
+}
+
+h1{
+	font-size: 125%;
+}
+
+.about-me{
+	border: 3px solid lightblue;
+	width: 79%;
+	position: relative;
+	float: none;
+	left: 0;
+	background-color: white;
+	margin: auto;
+	border-bottom: 20px;
+}
+
+.connect-1{
+	text-align: left;
+	border: 3px solid lightblue;
+	padding: 5px;
+	position: relative;
+	width: 80%;
+	background-color: white;
+	float: none;
+	margin: auto;
+	margin-top: 20px;
+	right: 0;
+
+}
+
+.connect-2{
+	text-align: left;
+	border: 3px solid lightblue;
+	padding: 5px;
+	position: relative;
+	width: 80%;
+	background-color: white;
+	float: none;
+	margin: auto;
+	margin-top: 20px;
+	right: 0;
+}
+
+.connect-3{
+	text-align: left;
+	border: 3px solid lightblue;
+	padding: 5px;
+	position: relative;
+	width: 80%;
+	background-color: white;
+	float: none;
+	margin: auto;
+	margin-top: 20px;
+	right: 0;
+}
+
+h3{
+	text-align: left;
+}
+
+.portfolio-pic{
+	position: relative;
+	width: 100%;
+	height: auto;
+	margin: 0 0 10px 0;
+	border: 1px solid black;
+}
+
+.pic-container{
+	position: relative;
+	width: 60%;
+	margin: auto;
+	float: none;
+}
+
+.pic-text{
+	position: absolute;
+	bottom:30px;
+	left: 0;
+	width: 100%;
+	border: 1px solid black;
+	background-color: lightblue;
+	text-align: center;
+ }
+
+ .about-me2{
+	border: 3px solid lightblue;
+	padding: 10px;
+	width: 79%;
+	left: 10%;
+	height: auto;
+	position: relative;
+	float: none;
+	background-color: white;
+}
+
+@media screen and (max-width: 640px) {
+
+.web-title{
+	width: 100%;
+	height: 49%;
+	text-align: center;
+	position: relative;
+	float: none;
+	left: 0;
+}
+
+h1{
+	line-height: 35px;
+}
+
+.top-links{
+	position: relative;
+	float: none;
+	line-height: 35px;
+	right: 0;
+	width: 100%;
+	margin: auto;
+	text-align: center;
+}
+  
+}
